--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-Hello
+<!DOCTYPE html>
+<html>
+<head>
+	<title> Welcome </title>
+	<link rel="stylesheet" type="text/css" href="css/grid.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+</head>
+<body>
+	<div class="row">
+		<div class="col-md-6 col-sm-12 col-md-offset-3">
+			<img src="capture_20180803_011946_191.jpg" alt="ge" style="width: 100%">
+			<p class="text-center"><b>Don pley dis gem. sev yor laif</b></p>
+		</div>
+	</div>
+</body>
+</html>
