--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="row">
 		<div class="col-md-8 col-sm-12 col-md-offset-2">
 			<img src="capture_20180803_011946_191.jpg" alt="ge" style="width: 100%">
-			<p class="text-center"><b>Don pley dis gem. sev yor laif</b></p>
+			<p class="text-center"><b>Dis gem kos en arm en e leg. Don pley dis gem. Sev yor laif</b></p>
 		</div>
 	</div>
 </body>
