--- a/index.html
+++ b/index.html
@@ -6,10 +6,22 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="row">
+	<div class="row"  style="padding: 3%">
+		<!--
 		<div class="col-md-8 col-sm-12 col-md-offset-2">
 			<img src="capture_20180803_011946_191.jpg" alt="ge" style="width: 100%">
 			<p class="text-center"><b>Dis gem kos en arm en e leg. Don pley dis gem. Sev yor laif</b></p>
+		</div>
+		-->
+		<div class="col-sm-12">
+			<ul style="list-style: none">
+				<li>
+					<a href="https://reavelearning.herokuapp.com/">E-Learning - Skripsi - React, Laravel</a>
+				</li>
+				<li>
+					<a href="https://hafidd.github.io/ionicuas">Wisata - UAS - Ionic</a>
+				</li>
+			</ul>
 		</div>
 	</div>
 </body>
