--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
 		<div class="col-sm-12">
 			<ul style="list-style: none">
 				<li>
-					<a href="https://reavelearning.herokuapp.com/">E-Learning - Skripsi - React, Laravel</a>
+					<a href="https://reavelearning.herokuapp.com/" target="blank">E-Learning - Skripsi - React, Laravel</a>
 				</li>
 				<li>
-					<a href="https://hafidd.github.io/ionicuas">Wisata - UAS - Ionic</a>
+					<a href="https://hafidd.github.io/ionicuas" target="blank">Wisata - UAS - Ionic</a>
 				</li>
 			</ul>
 		</div>
