--- a/index.html
+++ b/index.html
@@ -2,18 +2,12 @@
 <html>
 <head>
 	<title> Welcome </title>
-	<link rel="stylesheet" type="text/css" href="css/grid.css">
+	<link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-	<div class="row"  style="padding: 3%">
-		<!--
-		<div class="col-md-8 col-sm-12 col-md-offset-2">
-			<img src="capture_20180803_011946_191.jpg" alt="ge" style="width: 100%">
-			<p class="text-center"><b>Dis gem kos en arm en e leg. Don pley dis gem. Sev yor laif</b></p>
-		</div>
-		-->
-		<div class="col-sm-12">
+	<div class="row" style="width: 100%; padding: 2%">
+		<div class="col-md-8">
 			<ul style="list-style: none">
 				<li>
 					<a href="https://reavelearning.herokuapp.com/" target="blank">E-Learning - Skripsi - React, Laravel</a>
