--- a/index.html
+++ b/index.html
@@ -10,10 +10,16 @@
 		<div class="col-md-8">
 			<ul style="list-style: none">
 				<li>
+					<a href="https://github.com/hafidd?tab=repositories" target="blank">Repo</a>
+				</li>
+				<li>
 					<a href="https://reavelearning.herokuapp.com/" target="blank">E-Learning - Skripsi - React, Laravel</a>
 				</li>
 				<li>
 					<a href="https://hafidd.github.io/ionicuas" target="blank">Wisata - UAS - Ionic</a>
+				</li>
+				<li>
+					<a href="https://webmobile99.000webhostapp.com" target="blank">Wisata - Tugas - PHP, service worker</a>
 				</li>
 			</ul>
 		</div>
